--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Yourname's Homepage
-page-top-title: Yourname
-top-section-bg-text: Be what you wanna be
-home-subtitle: Yourname&ensp;|&ensp;上杉绘梨衣
-copyright-text: '&copy; Yourname 2023-2025. All Rights Reserved.'
+title: GaoXin's Homepage
+page-top-title: GaoXin
+top-section-bg-text: Be an engineer in cross-disciplinary
+home-subtitle: GaoXin&ensp;|&ensp;高昕
+copyright-text: '&copy; GaoXin 2023-2025. All Rights Reserved.'
